# Eisen

./: .gitignore  phasing-plan.md  plan-To-Do-App.md  plan-explainer.html  plan.md
.agents/skills/testing-android-eisen/: SKILL.md
.github/workflows/: ci.yml
clients/android/: .gitignore  PLAN-Android-App.md  README.md  gradle.properties
clients/android/app/: build.gradle.kts
clients/android/gradle/: libs.versions.toml
clients/android/gradle/wrapper/: gradle-wrapper.properties
clients/windows/: README.md
core/: Cargo.toml  README.md
core/src/: canonical.rs  clock.rs  envelope.rs  epoch.rs  identity.rs  lib.rs
docs/: CI.md  G0-READINESS.md  README.md  REPOSITORY-BOUNDARIES.md  architecture-data-flow.md
docs/adr/: 001-native-stack.md  002-canonical-encoding.md  003-crypto-primitives.md  004-owner-key-custody.md  005-epoch-key-rotation.md  006-task-schema.md  007-local-at-rest-coverage.md  008-fail-closed-counter-policy.md  009-snapshot-contract.md  010-cloud-api.md  011-recovery-package.md  012-server-stack.md
docs/specs/: account-enrollment-auth.md  canonical-encoding.md  cloud-api.md  enrollment-handshake.md  envelope-and-nonce.md  envelope-verification.md  recovery-compatibility-errors.md  recovery-package.md  relay-transport.md  retention-policy.md  service-metadata.md  state-machines.md  task-schema.md
docs/threat-model/: threat-model.md
ops/: README.md  run-local-checks.sh
protocol/: README.md
servers/: README.md
storage/: README.md
tests/: README.md
tools/: README.md  verify-protocol-stubs.sh  verify-structure.sh
(+50 files in other folders)
