[package]
name = "eisen-core"
version = "0.1.0"
edition = "2021"

[dependencies]
cbor2 = "=1.1.3"
ed25519-dalek = { version = "=2.2.0", features = ["zeroize"] }
getrandom = "0.2"
serde = { version = "1", features = ["derive"] }
unicode-normalization = "0.1"
x25519-dalek = { version = "=2.0.1", features = ["static_secrets", "zeroize"] }

[dev-dependencies]
tempfile = "3"
